# q2-quality-control

./: .copier-answers.yml  .gitignore  LICENSE  Makefile  pyproject.toml
.github/workflows/: ci-dev.yaml
conda-recipe/: meta.yaml
q2_quality_control/: __init__.py  _blast.py  _evaluate_seqs.py  _evaluate_taxonomy.py  _filter.py  _filter_pangenome.py  _pipelines.py  _stats.py  _utilities.py  decontam.py  plugin_setup.py  quality_control.py
q2_quality_control/_threshold_graph/: __init__.py  _visualizer.py
q2_quality_control/_threshold_graph/assets/: index.html
q2_quality_control/_threshold_graph/assets/js/: pag_sorter.min.js
q2_quality_control/tests/: __init__.py  test_decontam.py  test_filter.py  test_filter_pangenome.py  test_quality_control.py  test_stats.py
q2_quality_control/tests/data/pangenome/: combined.fasta  grch38.fasta  pangenome.fasta  pangenome.gfa
q2_quality_control/tests/data/pangenome/grch38_dataset/: md5sum.txt
