[project]
name = "q2-quality-control"
authors = [
    { name = "Nicholas Bokulich", email = "nbokulich@gmail.com" },
    { name = "Jorden Rabasco", email = "jordenrabasco1@gmail.com" }
]
description = "Quality control methods for feature and sequence data."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/qiime2/q2-quality-control"
Repository = "https://github.com/qiime2/q2-quality-control"

[project.entry-points.'qiime2.plugins']
"q2-quality-control" = "q2_quality_control.plugin_setup:plugin"

[build-system]
requires = [
    "setuptools",
    "versioningit",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git-archive"
describe-subst = "$Format:%(describe)$"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "q2_quality_control/_version.py"

[tool.setuptools]
include-package-data = true
script-files = [
    "q2_quality_control/decontam_assets/run_decontam.R"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["q2_quality_control*"]

[tool.setuptools.package-data]
q2_quality_control = ["**/*"]
